# codeC

c++/: .gitignore  CMakeLists.txt
c++/01-foundation/: CMakeLists.txt
c++/01-foundation/week1-cpp-basics/: diff.md  notes.md
c++/01-foundation/week2-pointers-memory/: diff.md  notes.md
c++/01-foundation/week3-raii-smartptr/: diff.md  notes.md
c++/02-core/: CMakeLists.txt
c++/02-core/week4-classes-oop/: diff.md  notes.md
c++/02-core/week5-operators-move/: diff.md  notes.md
c++/02-core/week6-templates/: diff.md  notes.md
c++/02-core/week7-stl/: diff.md  notes.md
c++/03-advanced/: CMakeLists.txt
c++/03-advanced/week10-exceptions/: diff.md  notes.md
c++/03-advanced/week11-performance/: diff.md  notes.md
c++/03-advanced/week8-tmp/: diff.md  notes.md
c++/03-advanced/week9-concurrency/: diff.md  notes.md
c++/04-operator/: CMakeLists.txt
c++/04-operator/week12-tensor-memory/: diff.md  notes.md
c++/04-operator/week13-kernels/: diff.md  notes.md
c++/04-operator/week14-capstone/: CMakeLists.txt  README.md
c++/04-operator/week14-capstone/examples/: CMakeLists.txt  demo.cpp
c++/04-operator/week14-capstone/include/: autograd.hpp  operators.hpp  tensor.hpp
c++/04-operator/week14-capstone/src/: autograd.cpp  operators.cpp  tensor.cpp
c++/04-operator/week14-capstone/tests/: CMakeLists.txt  test_autograd.cpp  test_operators.cpp  test_tensor.cpp
c++/docs/plans/: 2026-07-02-cpp-learning-implementation-plan.md
c++/docs/specs/: 2026-07-02-cpp-learning-curriculum-design.md
c++Basic/: .gitignore  CMakeLists.txt
c++Basic/docs/superpowers/plans/: 2026-07-04-java-to-cpp-learning.md
c++Basic/docs/superpowers/specs/: 2026-07-04-java-to-cpp-learning-design.md
c++Basic/module-01-basics/: compare.md
c++Basic/module-01-basics/examples/: 01_reference_vs_pointer.cpp  03_auto_and_range_for.cpp  04_namespace_overload.cpp
c++Basic/module-01-basics/exercises/: 01_swap_ref.cpp  02_array_stats.md
c++Basic/module-01-basics/exercises/solution/: 01_swap_ref.cpp
c++Basic/module-01-pre-basics/: compare.md
c++Basic/module-01-pre-basics/examples/: 01_header_and_source.cpp  02_preprocessor.cpp  03_initialization.cpp  04_static.cpp  05_enum_class.cpp  06_casting.cpp  07_array_vs_std.cpp
c++Basic/module-01-pre-basics/exercises/: 01_parse_args.cpp  01_parse_args.md  02_safe_enum.cpp  02_safe_enum.md
c++Basic/module-01-pre-basics/exercises/solution/: 01_parse_args.cpp  02_safe_enum.cpp
c++Basic/module-02-basics/: CMakeLists.txt
c++Basic/module-02-basics/examples/: 02_const_correctness.cpp
c++Basic/module-02-basics/exercises/: 01_swap_ref.md  02_array_stats.cpp
c++Basic/module-02-basics/exercises/solution/: 02_array_stats.cpp
c++Basic/module-02-memory/: CMakeLists.txt  compare.md
c++Basic/module-02-memory/examples/: 02_unique_ptr.cpp  03_shared_ptr.cpp  04_move_semantics.cpp
c++Basic/module-02-memory/exercises/: 01_resource_manager.cpp
c++Basic/module-02-memory/exercises/solution/: 01_resource_manager.cpp
c++Basic/module-03-memory/examples/: 01_stack_vs_heap.cpp  05_raii.cpp
c++Basic/module-03-memory/exercises/: 01_resource_manager.md  02_fix_memory_leak.cpp  02_fix_memory_leak.md
c++Basic/module-03-oop/: CMakeLists.txt
c++Basic/module-03-oop/examples/: 03_abstract_class.cpp  04_multiple_inherit.cpp
c++Basic/module-03-oop/exercises/: 01_shape_hierarchy.cpp  02_pimpl.cpp  02_pimpl.md
c++Basic/module-04-oop/: compare.md
c++Basic/module-04-oop/examples/: 01_ctor_dtor.cpp  02_virtual_func.cpp
c++Basic/module-04-oop/exercises/: 01_shape_hierarchy.md
c++Basic/module-04-value-semantics/: CMakeLists.txt  compare.md
c++Basic/module-04-value-semantics/examples/: 01_copy_constructor.cpp  02_move_constructor.cpp  03_operator_overload.cpp
c++Basic/module-04-value-semantics/exercises/: 01_string_wrapper.md
c++Basic/module-05-stl/: compare.md
c++Basic/module-05-stl/examples/: 01_containers.cpp  02_algorithms.cpp  03_string_apis.cpp
c++Basic/module-05-stl/exercises/: 01_group_by.md
c++Basic/module-05-value-semantics/exercises/: 01_string_wrapper.cpp  02_vector2d.cpp  02_vector2d.md
c++Basic/module-06-stl/: CMakeLists.txt
c++Basic/module-06-stl/exercises/: 01_group_by.cpp  02_top_k.cpp  02_top_k.md
c++Basic/module-06-templates/: compare.md
c++Basic/module-06-templates/examples/: 01_function_template.cpp  02_class_template.cpp
c++Basic/module-06-templates/exercises/: 01_generic_stack.cpp  02_generic_pair.cpp
c++Basic/module-07-modern-cpp/: compare.md
c++Basic/module-07-modern-cpp/examples/: 03_optional_variant.cpp
c++Basic/module-07-modern-cpp/exercises/: 01_lambda_sort.cpp  01_lambda_sort.md
c++Basic/module-07-templates/: CMakeLists.txt
c++Basic/module-07-templates/examples/: 03_variadic.cpp
c++Basic/module-07-templates/exercises/: 01_generic_stack.md  02_generic_pair.md
c++Basic/module-08-error-handling/: CMakeLists.txt  compare.md
c++Basic/module-08-error-handling/examples/: 01_exception_basics.cpp  02_noexcept.cpp  03_raii_exception_safety.cpp
c++Basic/module-08-error-handling/exercises/: 02_exception_safe_stack.cpp
c++Basic/module-08-modern-cpp/: CMakeLists.txt
c++Basic/module-08-modern-cpp/examples/: 01_lambda.cpp  02_constexpr.cpp
c++Basic/module-08-modern-cpp/exercises/: 02_variant_visitor.cpp  02_variant_visitor.md
c++Basic/module-09-concurrency/: CMakeLists.txt
c++Basic/module-09-concurrency/examples/: 01_thread_basics.cpp
c++Basic/module-09-concurrency/exercises/: 01_thread_safe_queue.cpp
c++Basic/module-09-error-handling/exercises/: 01_safe_file_reader.cpp  01_safe_file_reader.md  02_exception_safe_stack.md
c++Basic/module-10-concurrency/: compare.md
c++Basic/module-10-concurrency/examples/: 02_mutex.cpp  03_async_future.cpp
c++Basic/module-10-concurrency/exercises/: 01_thread_safe_queue.md  02_parallel_sum.cpp  02_parallel_sum.md
c++Basic/module-10-project/: README.md
c++Basic/module-10-project/exercises/: 02_extend.md
c++Basic/module-11-project/: CMakeLists.txt
c++Basic/module-11-project/exercises/: 01_task_manager.md
c++Basic/module-11-project/src/: main.cpp
(+272 files in other folders)
