cmake_minimum_required(VERSION 3.16)
project(CppBasic VERSION 1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_subdirectory(module-02-basics)
add_subdirectory(module-03-memory)
add_subdirectory(module-04-oop)
add_subdirectory(module-05-value-semantics)
add_subdirectory(module-06-stl)
add_subdirectory(module-07-templates)
add_subdirectory(module-08-modern-cpp)
add_subdirectory(module-09-error-handling)
add_subdirectory(module-10-concurrency)
add_subdirectory(module-11-project)
