cmake_minimum_required(VERSION 3.20)
project(phase2-core LANGUAGES CXX)

add_subdirectory(week4-classes-oop/examples/01-strategy-pattern)
add_subdirectory(week4-classes-oop/examples/02-object-slicing)
add_subdirectory(week4-classes-oop/examples/03-init-list)
add_subdirectory(week4-classes-oop/examples/04-diamond-inheritance)
add_subdirectory(week5-operators-move/examples/01-string-class)
add_subdirectory(week5-operators-move/examples/02-move-perf)
add_subdirectory(week5-operators-move/examples/03-functor)
add_subdirectory(week5-operators-move/examples/04-perfect-forwarding)
add_subdirectory(week6-templates/examples/01-generic-max)
add_subdirectory(week6-templates/examples/02-vector-template)
add_subdirectory(week6-templates/examples/03-compile-time-fib)
add_subdirectory(week6-templates/examples/04-type-traits-intro)
add_subdirectory(week7-stl/examples/01-container-choice)
add_subdirectory(week7-stl/examples/02-stream-to-algorithm)
add_subdirectory(week7-stl/examples/03-custom-sort)
add_subdirectory(week7-stl/examples/04-string-view)
