cmake_minimum_required(VERSION 3.20)
project(phase4-operator LANGUAGES CXX)

add_subdirectory(week12-tensor-memory/examples/01-tensor-indexing)
add_subdirectory(week12-tensor-memory/examples/02-zero-copy-slice)
add_subdirectory(week12-tensor-memory/examples/03-aligned-allocator)
add_subdirectory(week14-capstone)
